--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,13 +8,16 @@
   <body>
     <h1>Hello, Procrastinator!</h1>
     <p>Focus detected soon...</p>
+    <p>Name your current task: </p>
+    <input id = "task">
     <button id="start">Start Tracking</button>
     <button id="stop">Stop Tracking</button>
     <pre id="output"></pre>
-
+    <pre id="procrastination-label"></pre>
 
     <script>
       const output = document.getElementById('output');
+      const procrastinationLabel = document.getElementById('procrastination-label');
       const activityLog = {}; // Dictionary to store activity by app name
 
       // Sends request to track
@@ -48,7 +51,7 @@
 
 
         // Show the entire dictionary nicely
-        output.textContent = JSON.stringify(activityLog, null, 2);
+        //output.textContent = JSON.stringify(activityLog, null, 2);
       });
     </script>
   </body>
