--- a/frontend/src/setup.html
+++ b/frontend/src/setup.html
@@ -3,35 +3,237 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sisyphus</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: rgba(130, 31, 216, 0.9);
+      color: #333;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    #splash {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('mainsisy.png') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 10;
+      opacity: 1;
+      transition: opacity 2s ease;
+    }
+
+    #splash.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .splash-logo img {
+      width: 300px;
+      max-width: 100%;
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    .splash-text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 6px;
+      margin-top: 0
+    }
+
+    .tagline {
+      font-size: 1rem;
+      color: #000000;
+      margin-top: px;
+    }
+
+    .loader {
+      display: flex;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .dot {
+      width: 12px;
+      height: 12px;
+      border-radius: 50%;
+      background: #090909;
+      animation: bounce 1s infinite;
+    }
+
+    .dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes bounce {
+      0%, 80%, 100% { transform: scale(0); }
+      40% { transform: scale(1); }
+    }
+
+    #setupForm {
+      display: none;
+      flex-direction: column;
+      justify-content: space-between;
+      background: rgba(217, 215, 217, 0.92);
+      width: 720px;
+      height: 500px;
+      padding: 20px 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+      animation: fadeIn 1s ease forwards;
+      box-sizing: border-box;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h1, h3 {
+      text-align: center;
+      margin: 8px 0;
+    }
+
+    label {
+      margin-top: 8px;
+      font-weight: bold;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 8px;
+      margin-top: 4px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      border-radius: 6px;
+      font-family: inherit;
+      font-size: 14px;
+      background-color:#c4c3c4;
+      border-bottom-color : black;
+      transition: 0.3s ease-in-out;
+    }
+    input:hover, textarea:hover {
+      border-color: #a90ced;
+      background-color: #e8e7e8;
+      animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    input:focus, textarea:focus {
+      animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+      border-color: #a90ced;
+      outline: none;
+      box-shadow: 0 0 5px rgba(169, 14, 237, 0.5);
+      background-color : white;
+    }
+    .row {
+      display: flex;
+      gap: 20px;
+    }
+
+    .row > div {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    textarea {
+      resize: none;
+      height: 90px;
+    }
+
+    button {
+      margin-top: 10px;
+      padding: 10px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      background: linear-gradient(to right, #a90ced, #9000fe);
+      color: white;
+      cursor: pointer;
+      transition: transform 0.2s, box-shadow 0.2s;
+      width: 100%;
+    }
+
+    button:hover {
+      transform: scale(1.03);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    }
+  </style>
 </head>
 <body>
-  <h1>Sisyphus.</h1>
+
+  <!-- Splash Screen -->
+  <div id="splash">
+    <div class="splash-logo">
+      <img src="sisyphus.png" alt="Sisyphus Logo" />
+  </div>
+    <div class="tagline">Preparing for the grind...</div>
+    <div class="loader">
+      <div class="dot"></div>
+      <div class="dot"></div>
+      <div class="dot"></div>
+    </div>
+  </div>
+
+  <!-- Setup Form -->
   <form id="setupForm">
+    <h1>Sisyphus.</h1>
+    <div class = 'splash-text'>
+      <p>Your A.I assisted, anti procrastinating tool</p>
+    </div>
+    <label for="activity">Activity Done *</label>
+    <input type="text" id="activity" required />
 
-    <h3>Focus Setting</h3>
-    <label for = "work-time"> Focus length (minutes) </label> *<br/>
-      <input type="number" id="work-time" min="1" required /> <br/>
+    <h3>Focus Settings</h3>
+    <div class="row">
+      <div>
+        <label for="work-time">Focus length (minutes) *</label>
+        <input type="number" id="work-time" min="1" required />
+      </div>
+      <div>
+        <label for="rest-time">Break length (minutes)</label>
+        <input type="number" id="rest-time" />
+      </div>
+      <div>
+        <label for="intervals">Focus intervals *</label>
+        <input type="number" id="intervals" min="1" required />
+      </div>
+    </div>
 
-    <label for = "rest-time"> Break length (minutes) </label> *<br/>
-      <input type="number" id="rest-time" /> <br/>
-
-    <label for = "intervals"> Focus intervals (number of repetitions) </label> *<br/>
-      <input type="number" id="intervals" min="1" required /><br/>
-
-    <br> <br>
-
-    <h3>Activity Setting</h3>
-    <label for = 'activity'> Activity Done </label>*<br/>
-      <input type="text" id="activity" required /><br/>
-
-    <label for="whitelist"> Whitelisted Websites (one per line) </label><br/>
-      <textarea id="whitelist" rows="5" placeholder="e.g. example.com"></textarea>
+    <label for="whitelist">Whitelisted Websites (one per line)</label>
+    <textarea id="whitelist" placeholder="e.g. example.com"></textarea>
 
     <button type="submit">Start Tracking</button>
   </form>
 
   <script>
     const { ipcRenderer } = window.api || require('electron').ipcRenderer;
+    window.onload = () => {
+      const splash = document.getElementById('splash');
+      const form = document.getElementById('setupForm');
+
+      setTimeout(() => {
+        splash.classList.add('fade-out');
+        setTimeout(() => {
+          form.style.display = 'flex';
+        }, 1500);
+      }, 3000);
+    };
 
     document.getElementById('setupForm').addEventListener('submit', async (e) => {
       e.preventDefault();
@@ -47,28 +249,24 @@
         return;
       }
 
-      // Focus period
       const focusPeriod = {
-        focus_length: workTime, 
-        break_length: restTime ? restTime : 0,
-        interval: intervals ? intervals : 0 
-      }
+        focus_length: workTime,
+        break_length: restTime || 0,
+        interval: intervals || 0
+      };
 
-      // Whitelisted websites
       const whitelist = whitelistRaw
         ? whitelistRaw.split('\n').map(site => site.trim()).filter(Boolean)
         : [];
 
       try {
-          await window.api.saveSetupData({ focusPeriod, activity, whitelist });
-          console.log("DEBUG saveSetupData success!")
-          window.api.loadMainWindow();
+        await window.api.saveSetupData({ focusPeriod, activity, whitelist });
+        console.log("DEBUG saveSetupData success!");
+        window.api.loadMainWindow();
       } catch (err) {
-          alert('Error saving data: ' + err.message);
-      };
+        alert('Error saving data: ' + err.message);
+      }
     });
-
-
   </script>
 </body>
 </html>
